@@ -5,3 +5,4 @@ PEERJS_PATH='/';
 PEERJS_DEBUG=false;
 PEERJS_MAX_RECONN_ATTEMPT=3;
 PEERJS_TIMEOUT=30000;
+YOLOBEAR_SERVER_URL='localhost';
